<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="5sp"
    android:gravity="top|center_horizontal"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/are_your_sure"
        android:textSize="@dimen/default_button_text_size"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_will_stop_the_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit"
        android:textSize="@dimen/default_button_text_size"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5sp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnYes"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="@color/color_accent"
            android:layout_weight="1"
            android:text="@string/yes"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:backgroundTint="@color/color_accent"
            android:layout_margin="5sp"
            android:text="@string/no"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
</LinearLayout>